--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,38 @@
+
+body {
+  margin: 0;
+}
+
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+}
+
+h1 {
+  font-family: 'Russo One', sans-serif;
+  font-size: 3em;
+  border-bottom: 3px solid green;
+  border-right: 3px solid green;
+  width: 350px;
+  text-align: center;
+  margin: 0;
+
+}
+img {
+  width: 450px;
+  height: 300px;
+  margin: 10px;
+  transition: all 1s;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+/*
+
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
@@ -51,3 +86,4 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+*/
