--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,34 @@ img:hover {
   transform: scale(1.1);
 }
 
+#landing {
+  background: url("../mist.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+
+.lpContent {
+  background: yellow;
+  display: flex;
+  height: 10em;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+  margin-bottom: 30px;
+}
+
+.btn-success {
+  padding: 1rem 2rem;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
 /*
 
 ---
